<resources>
    <string name="app_name">Dine Time</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="cart">Add to Cart</string>
    <string name="History">History</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>