<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_image"
    tools:context=".Activity.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Register"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_border_line"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_border_line"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/address"
            android:textColorHint="@color/white"
            android:inputType="textPostalAddress"
            android:background="@drawable/custom_border_line"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_border_line"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_border_line"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_below="@+id/layout1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_border_line"/>
    </RelativeLayout>
</ScrollView>