<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_image"
    tools:context=".Activity.Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_border_line"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_border_line"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>

        <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User"
                android:checked="true"
                android:textColor="@color/white"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Admin"
                android:textColor="@color/white"
                android:textSize="20dp"/>

        </RadioGroup>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/layout1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_border_line"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Not Registered!"
        android:textAlignment="viewEnd"
        android:paddingRight="20dp"
        android:textSize="20dp"
        android:textColor="@color/light_red"
        android:textStyle="bold"
        android:layout_below="@+id/btn_login"
        tools:ignore="RtlCompat" />



</RelativeLayout>